👔 Update destination integration 🗑️ Clean unused resources

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,8 +13,8 @@ appcompat = "1.7.0"
 constraint_layout = "2.2.0"
 benmanesversion = "0.51.0"
 detekt = "1.23.7"
-segment = "1.19.1"
-userpilot-android = "0.0.1-beta.12"
+segment = "1.19.2"
+userpilot-android = "0.0.1-rc.2"
 junit = "4.13.2"
 mockk = "1.13.8"
 
