--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,20 +3,20 @@ agp = "8.7.3"
 kotlin = "1.8.22"
 ksp = "1.8.22-1.0.11"
 target_sdk_version = "35"
-compile_sdk_version = "35"
-gradle-maven-publish-plugin = "0.30.0"
-material = "1.12.0"
 min_sdk_version = "21"
-recyclerview = "1.4.0"
+compile_sdk_version = "35"
+gradle-maven-publish-plugin = "0.32.0"
+material = "1.12.0"
+recyclerview = "1.3.2"
 core_ktx = "1.13.1"
 appcompat = "1.7.0"
 constraint_layout = "2.2.0"
 benmanesversion = "0.51.0"
 detekt = "1.23.7"
-segment = "1.19.2"
-userpilot-android = "0.0.1-rc.2"
 junit = "4.13.2"
 mockk = "1.13.8"
+segment = "1.19.2"
+userpilot-android = "1.0.2"
 
 [libraries]
 # publishing
